Fixing overlapping card #2

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -167,7 +167,7 @@ ul.list li {
     position: relative;
     background-color: white;
     width: 100%;
-    margin: 0 20%;
+    margin: 0 3.5rem;
     padding: 2rem;
     border-radius: calc(var(--size) * 4);
     box-shadow: 0 4px 40px #0000001a;
